E1-1042 fixes related to Image rendering and Paddingor Spacing in IPAD and Mobile views

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/cross-promo/cross-promo.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/cross-promo/cross-promo.scss
@@ -117,13 +117,37 @@
   @media (max-width: 991px) {
     overflow-x: hidden;
     // background: linear-gradient(-177.14deg,#222 41%,#491873 110%);
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 4px;
+    padding-right: 4px;
     >.container {
       padding-left: 0;
       padding-right: 0;
     }
   }
+  @include respond-to-min ($tablet) {
+    .container {
+      padding-left: 0px !important;
+      padding-right: 0px !important;
+      margin-right: 0px !important;
+    }
+  }
+
+  @include respond-to-min ($desktop-wide) {
+    .container {
+      padding-left: toRem(12) !important;
+      padding-right: toRem(12) !important;
+      margin-right: auto !important;
+    }
+  }
+
+  @include respond-to-min ($desktop-wide) {
+    .container {
+      padding-left: toRem(12) !important;
+      padding-right: toRem(12) !important;
+      margin-right: auto !important;
+    }
+  }
+
   .container {
     max-width: 1224px;
   }
@@ -149,11 +173,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      @media (min-width: 768px) {
-        padding-right: 0 !important;
-      }
-      @media (min-width: 768px) {
-        padding-right: 0 !important;
+      @include respond-to-min ($tablet) {
+        padding-right: 8px !important;
       }
       div.cover {
         height: 100%;
@@ -319,12 +340,16 @@
         flex-direction: column;
         .lef-col {
           order: 1;
+          padding-left: 0 !important;
+          padding-right: 0 !important;
           .ul-list-cms ul li:after {
             background-color: #fff;
           }
         }
         .right-col {
           order: 2;
+          padding-left: 0 !important;
+          padding-right: 0 !important;
         }
       }
       h3 {
